tests/sintax-semanth/should_pass/MyTest.tds
program
begin
    void functionX()
        begin
            integer asd;
            asd = 10;
        end

    integer main()
        begin
            integer x,y;
            x = 10 + 2;
            y = x - 5;
            functionX();
            if (y < x) then begin
                x = x-10;
            end
            else begin
                y = y-10;
            end
            return y+x;
        end
end