tests/sintax-semanth/should_fail/boolean_is_not_correct_type_name.tds
program
begin
	boolean fun(integer w)
		begin
			integer a = 5;
		end
end